logs/dag_id=save_city_info_weather_v01/run_id=manual__2024-09-15T07:33:25.648343+00:00/task_id=insert_data/attempt=1.log
[2024-09-15T07:33:30.443+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-15T07:33:25.648343+00:00 [queued]>
[2024-09-15T07:33:30.449+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-15T07:33:25.648343+00:00 [queued]>
[2024-09-15T07:33:30.449+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2024-09-15T07:33:30.450+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 6
[2024-09-15T07:33:30.450+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2024-09-15T07:33:30.463+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): insert_data> on 2024-09-15 07:33:25.648343+00:00
[2024-09-15T07:33:30.467+0000] {standard_task_runner.py:55} INFO - Started process 4036 to run task
[2024-09-15T07:33:30.470+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'save_city_info_weather_v01', 'insert_data', 'manual__2024-09-15T07:33:25.648343+00:00', '--job-id', '335', '--raw', '--subdir', 'DAGS_FOLDER/saver_info.py', '--cfg-path', '/tmp/tmpu4pe1ufw']
[2024-09-15T07:33:30.470+0000] {standard_task_runner.py:83} INFO - Job 335: Subtask insert_data
[2024-09-15T07:33:30.518+0000] {task_command.py:389} INFO - Running <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-15T07:33:25.648343+00:00 [running]> on host 0c5fe11d0c9c
[2024-09-15T07:33:30.555+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=me
AIRFLOW_CTX_DAG_ID=save_city_info_weather_v01
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2024-09-15T07:33:25.648343+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-09-15T07:33:25.648343+00:00
[2024-09-15T07:33:30.555+0000] {sql.py:253} INFO - Executing: insert into weathers (city_name, max_temp, min_temp, wind, descript)
        values (%(sname)s, %(max_temp)s, %(min_temp)s, %(wind)s, %(descript)s);
[2024-09-15T07:33:30.567+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-15T07:33:30.682+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-15T07:33:30.688+0000] {sql.py:364} INFO - Running statement: insert into weathers (city_name, max_temp, min_temp, wind, descript)
        values (%(sname)s, %(max_temp)s, %(min_temp)s, %(wind)s, %(descript)s);, parameters: None
[2024-09-15T07:33:30.691+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 2:         values (%(sname)s, %(max_temp)s, %(min_temp)s, %(win...
                        ^

[2024-09-15T07:33:30.696+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=save_city_info_weather_v01, task_id=insert_data, execution_date=20240915T073325, start_date=20240915T073330, end_date=20240915T073330
[2024-09-15T07:33:30.703+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 335 for task insert_data (syntax error at or near "%"
LINE 2:         values (%(sname)s, %(max_temp)s, %(min_temp)s, %(win...
                        ^
; 4036)
[2024-09-15T07:33:30.732+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2024-09-15T07:33:30.744+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
